# termpulse

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  RELEASING.md  SECURITY.md  deny.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/termpulse/: Cargo.toml  README.md
crates/termpulse-cli/: Cargo.toml  README.md
crates/termpulse-cli/src/: cli.rs  main.rs
crates/termpulse-cli/src/cmd/: clear.rs  completions.rs  detect.rs  done.rs  fail.rs  mod.rs  pipe.rs  set.rs  start.rs  wrap.rs
crates/termpulse-cli/tests/: cli_integration.rs
crates/termpulse-core/: Cargo.toml  README.md
crates/termpulse-core/benches/: core_bench.rs
crates/termpulse-core/fuzz/: Cargo.toml
crates/termpulse-core/fuzz/fuzz_targets/: fuzz_find_sequences.rs  fuzz_sanitize_label.rs  fuzz_strip_sequences.rs
crates/termpulse-core/src/: lib.rs  osc.rs  parse.rs  sanitize.rs  strip.rs
crates/termpulse-core/tests/: proptest_core.rs
crates/termpulse/examples/: basic.rs  core_raw.rs  detect.rs
crates/termpulse/src/: controller.rs  detect.rs  estimate.rs  lib.rs  throttle.rs
crates/termpulse/src/backend/: ascii.rs  mod.rs  osc.rs  silent.rs  tmux.rs
